Página principal y footer listo

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,36 @@
-<footer class="page-footer">
-    <div class="footer-copyright">
-        <div class="container">
-        © 2020 Kokone Learn
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+<!-- Footer -->
+
+<footer class="page-footer purple lighten-4">
+    <div class="container">
+      <div class="row">
+        <div class="col l4 m4 s12 columna">
+          <h5 class="white-text">SÍGUENOS</h5>
+          <ul>
+            <li><a class="white-text redes" href="https://facebook.com"><img src="assets/facebook.png" alt="">Facebook</a></li>
+            <li><a class="white-text redes" href="https://twitter.com"><img src="assets/twitter.png" alt="">Twitter</a></li>
+            <li><a class="white-text redes" href="https://instagram.com"><img src="assets/instagram.png" alt="">Instagram</a></li>
+          </ul> 
+        </div>
+        <div class="col l4 m4 s12 columna">
+          <h5 class="white-text">MENÚ</h5>
+          <ul>
+                <li><a class="white-text" href="home">Home</a></li>
+                <li><a class="white-text" href="regprofe">Registro Profesores</a></li>
+                <li><a class="white-text" href="regalumno">Registro Alumnos</a></li>
+                <li><a class="white-text" href="login">Ingresar</a></li>
+                <li><a class="white-text" href="cursosAlumno">Cursos</a></li>
+          </ul>
+        </div>
+        <div class="col l4 m4 s12 columna ">
+          <img class="pad responsive-img" src="assets/logoFormal.png" alt="">  
+        </div>
+      </div>
     </div>
+    <div class="footer-copyright purple lighten-1">
+      <div class="container">
+      © 2020 Copyright Kokone Learn
+      </div>
     </div>
 </footer>
+
+<!-- Fin del Footer -->
