--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <li><a href="home"><i class="large material-icons">home</i>Home</a></li>
             <!-- <li><a href="regprofe">Registro Profesores</a></li> -->
             <!-- <li><a href="regalumno">Registro Alumnos</a></li>  -->
-            <li><a href="cursosAlumno"><i class="large material-icons">local_library</i>CursosAlum</a></li>
+            <li><a href="cursosAlumno"><i class="large material-icons">local_library</i>Cursos</a></li>
             <li><a href="login"><i class="large material-icons">person_pin</i>Ingresar</a></li>
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown2"><i class="large material-icons">fiber_new</i>Registro<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
