--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
       </li>
       <li>
         <img src="assets/child3.jpg"> 
-        <div class="caption right-align">
+        <div class="caption left-align">
           <h3 class="encabezado" id="color3">“Siempre se puede ser mejor”</h3>
           <h5 id="color3" class="encabezado  right-align">— Tiger Woods.</h5>
         </div>
@@ -70,16 +70,16 @@
         <div class="parallax"><img src="assets/home1.jpg"></div>
         <div class="nosotros">
           <h2>Kokone Learn</h2>
-          <p class="hide-on-med-and-down somos">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-               Quia suscipit voluptatum commodi libero esse voluptate ratione harum dolores. 
-               Laboriosam magni nesciunt obcaecati excepturi alias corrupti ducimus quo reiciendis, sequi itaque beatae.
-               Quisquam pariatur beatae ut dolor ipsa minima vel error?
+          <p class="hide-on-med-and-down somos">Es una plataforma digital de aprendizaje enfocada en escuelas primarias
+            que brinda la confianza y acompañamiento que el estudiante necesita durante sus horas de estudio. Y proveé a
+            los profesores una herramienta para la creación de su contenido para apoyar el aprendizaje de forma dinámica 
+            y divertida.
 
           </p>
-            <div class="textch hide-on-large-only somos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Rem eos placeat quibusdam reprehenderit culpa cum corporis magnam neque, aliquid qui repellendus quasi ad aliquam, 
-              fuga itaque voluptates nulla eius facilis natus delectus?
-               Rerum quo temporibus suscipit unde nostrum amet magnam.
+            <div class="textch hide-on-large-only somos">Es una plataforma digital de aprendizaje enfocada en escuelas primarias
+              que brinda la confianza y acompañamiento que el estudiante necesita durante sus horas de estudio. Y proveé a
+              lo profesores una herramienta para la creación de su contenido para apoyar el aprendizaje de forma dinámica 
+              y divertida.
             </div>
         </div>
     </div>
@@ -90,12 +90,14 @@
           <div class="col l4 m4 s12">
             <img class="responsive-img" src="assets/objetivo.png" alt="">
             <h2>Vision</h2>
-            <p class="letra1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptas.</p>
+            <p class="letra1">Explorar la relevancia y los beneficios de la tecnología en las activades de materias a nivel escuela primaria,
+               mejorando los efectos de la enseñanza, interés y motivación de los estudiantes. </p>
           </div>
           <div class="col l2 m2 s12"></div>
           <div class="col l4 m4 s12"><img class="responsive-img"src="assets/contento.png" alt="">
             <h2>Valores</h2>
-            <p class="letra1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, sint.</p>
+            <p class="letra1">Con las tecnologías emergentes se busca proporcianor una 
+              interacción má natural con los estudiantes mediante nuestro personaje virtual llamado "Kokone". </p>
           </div>
           <div class="col l1 m1 s12"></div>
         </div>
@@ -105,60 +107,60 @@
       <h2 class="header brown-text center-align">EL MUNDO DE KOKONE LEARN</h2>
     </div>
 
-    <div class="container grey lighten-5 z-depth-4">
+    <div class="container grey lighten-5 z-depth-4 size">
     
       <div class="row">
         <div class="col s12">
-          <ul class="tabs center pink accent-1">
-            <li class="tab col s3"><a class="active white-text" href="#test1">Profesores</a></li>
-            <li class="tab col s3"><a class="white-text" href="#test2">Estudiantes</a></li>
-            <li class="tab col s3"><a class="white-text" href="#test3">Padres</a></li>
-            <li class="tab col s3"><a class="white-text" href="#test4">Herramientas</a></li>
+          <ul class="tabs  center red lighten-5">
+            <li class="tab col s3"><a class="black-text text-label active" href="#test1">PROFESORES</a></li>
+            <li class="tab col s3"><a class="black-text text-label" href="#test2">ESTUDIANTES</a></li>
+            <li class="tab col s3"><a class="black-text text-label" href="#test3">ESCUELAS</a></li>
+            <li class="tab col s3"><a class="black-text text-label" href="#test4">HERRAMIENTAS</a></li>
           </ul>
         </div>
       </div>
         <!-- Contenido de Profesores -->
         <div id="test1" class="col s12">
-          <div class="row">
+          <div class="row left-align">
             <div class="col s12 m6 l4">
              <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="assets/default.png">
+                <img class="activator" src="assets/profesor1.jpg">
               </div>
               <div class="card-content center-align">
-                <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Creación de contenido<i class="material-icons right">more_vert</i></span>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                  <p>Descripción de la característica 1</p>
+                  <p>El profesor tiene la facilidad de crear su propio contenido mediante diapositivas!.</p>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img class="activator" src="assets/default.png">
+                  <img class="activator" src="assets/profesor2.jpg">
                 </div>
                 <div class="card-content center-align">
-                  <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                  <span class="card-title activator grey-text text-darken-4">Plataforma reponsiva<i class="material-icons right">more_vert</i></span>
                 </div>
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                    <p>Descripción de la característica 2</p>
+                    <p>El profesor puede entrar desde cualquier dispositivo!</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/default.png">
+                    <img class="activator" src="assets/profesor3.jpg">
                   </div>
                   <div class="card-content center-align">
-                    <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                    <span class="card-title activator grey-text text-darken-4">Preguntas Frecuentes<i class="material-icons right">more_vert</i></span>
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                      <p>Descripción de la característica 3</p>
+                      <p>Gracias a la tecnología de IBM podrá responder las preguntas de sus estudiantes sin estar presente.</p>
                     </div>
                   </div>
                 </div>
@@ -168,46 +170,46 @@
 
         <div id="test2" class="col s12">
              <!-- CONTENIDO DE ESTUDIANTES -->
-             <div class="row">
+             <div class="row left-align">
                <div class="col s12 m6 l4">
                  <div class="card">
                    <div class="card-image waves-effect waves-block waves-light">
-                     <img class="activator" src="assets/default.png">
+                     <img class="activator" src="assets/alumno1.jpg">
                    </div>
                    <div class="card-content center-align">
-                     <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                     <span class="card-title activator grey-text text-darken-4">Interfaz amigable<i class="material-icons right">more_vert</i></span>
                    </div>
                    <div class="card-reveal">
                      <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                       <p>Descripción de la característica 1</p>
+                       <p>Los estudiantes estudiaran a lado de nuestra mascota Kokone.</p>
                      </div>
                    </div>
                  </div>
                  <div class="col s12 m6 l4">
                    <div class="card">
                      <div class="card-image waves-effect waves-block waves-light">
-                       <img class="activator" src="assets/default.png">
+                       <img class="activator" src="assets/alumno2.jpg">
                      </div>
                      <div class="card-content center-align">
-                       <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                       <span class="card-title activator grey-text text-darken-4">Área de estudio<i class="material-icons right">more_vert</i></span>
                      </div>
                      <div class="card-reveal">
                        <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                         <p>Descripción de la característica 2</p>
+                         <p>Aquí el estudiante podrá retomar las clases publicadas por sus profesores para mejorar su aprendizaje.</p>
                        </div>
                      </div>
                    </div>
                    <div class="col s12 m6 l4">
                      <div class="card">
                        <div class="card-image waves-effect waves-block waves-light">
-                         <img class="activator" src="assets/default.png">
+                         <img class="activator" src="assets/alumno3.jpg">
                        </div>
                        <div class="card-content center-align">
-                         <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                         <span class="card-title activator grey-text text-darken-4">Progreso del curso<i class="material-icons right">more_vert</i></span>
                        </div>
                        <div class="card-reveal">
                          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                           <p>Descripción de la característica 3</p>
+                           <p>Los estudiantes pueden visualizar el progreso del curso por clase.</p>
                          </div>
                        </div>
                      </div>
@@ -217,47 +219,47 @@
 
 
        <div id="test3" class="col s12">
-         <!-- CONTENIDO PADRES -->
-                  <div class="row">
+         <!-- CONTENIDO ESCUELAS -->
+                  <div class="row left-align">
                     <div class="col s12 m6 l4">
                       <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="assets/default.png">
+                          <img class="activator" src="assets/escuela1.jpg">
                         </div>
                         <div class="card-content center-align">
-                          <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                          <span class="card-title activator grey-text text-darken-4">Capacitación<i class="material-icons right">more_vert</i></span>
                         </div>
                         <div class="card-reveal">
                           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                            <p>Descripción de la característica 1.</p>
+                            <p>Al ser una plataforma sencilla de utilizar disminuirá la inversión en capacitación de profesores</p>
                           </div>
                         </div>
                       </div>
                       <div class="col s12 m6 l4">
                         <div class="card">
                           <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/default.png">
+                            <img class="activator" src="assets/escuela2.jpg">
                           </div>
                           <div class="card-content center-align">
-                            <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                            <span class="card-title activator grey-text text-darken-4">Creación de cursos virtuales<i class="material-icons right">more_vert</i></span>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                              <p>Descripción de la característica 2</p>
+                              <p>Permitir la enseñanza a distancia en situacione que lo requieran.</p>
                             </div>
                           </div>
                         </div>
                         <div class="col s12 m6 l4">
                           <div class="card">
                             <div class="card-image waves-effect waves-block waves-light">
-                              <img class="activator" src="assets/default.png">
+                              <img class="activator" src="assets/escuela3.jpg">
                             </div>
                             <div class="card-content center-align">
-                              <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                              <span class="card-title activator grey-text text-darken-4">Costo<i class="material-icons right">more_vert</i></span>
                             </div>
                             <div class="card-reveal">
                               <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                                <p>Descripción de la característica 3</p>
+                                <p>Pago único para un número ilimitado de profesores por institución educativa.</p>
                               </div>
                             </div>
                           </div>
@@ -266,50 +268,54 @@
        </div>
        <div id="test4" class="col s12">
          <!-- TAB HERRAMIENTAS -->
-                  <div class="row">
+                  <div class="row left-align">
                     <div class="col s12 m6 l4">
                       <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="assets/default.png">
+                          <img class="activator" src="assets/herramientas1.jpg">
                         </div>
                         <div class="card-content center-align">
-                          <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                          <span class="card-title activator grey-text text-darken-4">Almacenamiento<i class="material-icons right">more_vert</i></span>
                         </div>
                         <div class="card-reveal">
                           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                            <p>Descripción de la característica 1</p>
+                            <p>Con Databases for MongoDB se tiene una alta disponibiblidad y escalabilidad en los datos. </p>
                           </div>
                         </div>
                       </div>
                       <div class="col s12 m6 l4">
                         <div class="card">
                           <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/default.png">
+                            <img class="activator" src="assets/herramientas2.jpg">
                           </div>
                           <div class="card-content center-align">
-                            <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                            <span class="card-title activator grey-text text-darken-4">Servicio Web<i class="material-icons right">more_vert</i></span>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                              <p>Descripción de la característica 2</p>
+                              <p>De IBM Cloud se utiliza un servidor nativo que soporta intensivo tráfico de datos asegurando la disponibilidad de la información.</p>
                             </div>
                           </div>
                         </div>
                         <div class="col s12 m6 l4">
                           <div class="card">
                             <div class="card-image waves-effect waves-block waves-light">
-                              <img class="activator" src="assets/default.png">
+                              <img class="activator" src="assets/herramientas3.jpg">
                             </div>
                             <div class="card-content center-align">
-                              <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                              <span class="card-title activator grey-text text-darken-4">I.A<i class="material-icons right">more_vert</i></span>
                             </div>
                             <div class="card-reveal">
                               <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                                <p>Descripción de la característica 3</p>
+                                <p>Con IBM Watson se tendrá una interacción de comunicación entre profesor-alumno</p>
                               </div>
                             </div>
                           </div>
                   </div> 
          <!-- FIN DE HERRAMIENTAS -->
       </div>
+  </div>
+
+  <div class="parallax-container separate">
+    <div class="parallax"><img src="assets/menina.jpg"></div>
   </div>
