--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,21 @@
 
-.page-footer {
-    /*transform: rotate(20deg);*/
-	/*background-image: url("https://i.pinimg.com/originals/e1/9f/c4/e19fc4f92bc65978ceac0213a1abaf65.gif");*/
+/* .page-footer {
+    transform: rotate(20deg);
+    background-image: url("https://i.pinimg.com/originals/e1/9f/c4/e19fc4f92bc65978ceac0213a1abaf65.gif");
+    background-color: #ffeab6;
+}
+
+#footer-color{
+    color: #212121  ;
+} */
+
+.pad{
+    margin-top: 50px;
+}
+
+.redes img{
+    width: 10%;
+    height: 10%;
+    float: left;
+    padding-right: 8px;
 }
