--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 .encabezado{
     font-family: 'Lobster', cursive;
     text-shadow: -3px -3px 3px #000000, 3px -3px 3px #000000, -3px 3px 3px #000000, 3px 3px 3px #000000;
@@ -92,4 +93,13 @@ h2 {
     font-size: 20px;
     font-weight: 300;
     font-family: 'Courgette', cursive;
+}
+
+.text-label{
+    font-family: 'Permanent Marker',cursive;
+    font-size: 50px;
+}
+
+.size{
+    height: 30%;
 }
